@@ -70,4 +70,5 @@ tags
 TAGS
 .coverage
 coverage/
+externals/
 htmlcov/
